Add header navbars

--- a/HTML-Coursework-Week2.html
+++ b/HTML-Coursework-Week2.html
@@ -7,6 +7,15 @@
     <title>London 10-Eagles | Pouya Nasraei | HTML-CSS-Coursework-Week2</title>
 </head>
 <body>
-    
+    <nav aria-label="header-navbar">
+        <div class="navbar">
+            <a href="Ingredients">Ingredients</a>
+            <a href="Recipe">Recipe</a>
+            <a href="About me">About me</a>
+            <a href="Subscribe">Subscribe</a>
+        </div>
+
+    </nav>
+
 </body>
 </html>
