created the header and h1

--- a/HTML-Coursework-Week2.html
+++ b/HTML-Coursework-Week2.html
@@ -14,8 +14,11 @@
             <a href="About me">About me</a>
             <a href="Subscribe">Subscribe</a>
         </div>
-
     </nav>
+    <header>
+        <div id="my-recipe-header">Enjoy the recipe</div>
+    </header>
+    <h1>Do you like a healthy Lasagne?</h1>
 
 </body>
 </html>
