--- a/HTML-Coursework-Week2.html
+++ b/HTML-Coursework-Week2.html
@@ -16,9 +16,10 @@
         </div>
     </nav>
     <header>
-        <div id="my-recipe-header">Enjoy the recipe</div>
+        <div id="my-recipe-header">Do you like a healthy Lasagne?</div>
     </header>
-    <h1>Do you like a healthy Lasagne?</h1>
+    <h1>Enjoy the recipe</h1>
+    <img src="https://images.immediate.co.uk/production/volatile/sites/30/2021/11/Healthy-lasagne-df147fa.jpg?quality=90&webp=true&resize=440,400" alt="Lasagne photo" class="lasagne-image">
 
 </body>
 </html>
