add details for the image

--- a/HTML-Coursework-Week2.html
+++ b/HTML-Coursework-Week2.html
@@ -19,7 +19,12 @@
         <div id="my-recipe-header">Do you like a healthy Lasagne?</div>
     </header>
     <h1>Enjoy the recipe</h1>
-    <img src="https://images.immediate.co.uk/production/volatile/sites/30/2021/11/Healthy-lasagne-df147fa.jpg?quality=90&webp=true&resize=440,400" alt="Lasagne photo" class="lasagne-image">
+    <div class="photo-details">
+        <img src="https://images.immediate.co.uk/production/volatile/sites/30/2021/11/Healthy-lasagne-df147fa.jpg?quality=90&webp=true&resize=440,400" alt="Lasagne photo" class="lasagne-image">
+        <div>Prep: 15 mins</div>
+        <div>Easy</div>
+        <div>Cook: 1 hr and 15min</div>
+    </div>
 
 </body>
 </html>
