add the Ingredients

--- a/HTML-Coursework-Week2.html
+++ b/HTML-Coursework-Week2.html
@@ -25,6 +25,23 @@
         <div>Easy</div>
         <div>Cook: 1 hr and 15min</div>
     </div>
+    <div class="ingredients">Ingredients
+        <div>1 tbsp olive oil</div>
+        <div>1 large onion (250g), finely chopped</div>
+        <div>320g carrots, finely chopped</div>
+        <div>2 celery sticks (140g), finely chopped</div>
+        <div>2 bay leaves</div>
+        <div>500g 5% beef mince</div>
+        <div>3 large garlic cloves, finely grated</div>
+        <div>400g can chopped tomatoes</div>
+        <div>2 tbsp tomato purée</div>
+        <div>1½ tsp vegetable bouillon powder</div>
+        <div>400ml semi-skimmed milk</div>
+        <div>30g wholemeal flour</div>
+        <div>generous pinch of nutmeg</div>
+        <div>6 sheets wholemeal lasagne (125g)</div>
+        <div>25g finely grated parmesan</div>
+    </div>
 
 </body>
 </html>
