--- a/HTML-Coursework-Week2.html
+++ b/HTML-Coursework-Week2.html
@@ -42,6 +42,12 @@
         <div>6 sheets wholemeal lasagne (125g)</div>
         <div>25g finely grated parmesan</div>
     </div>
-
+    <p>Method</p>    
+    <p>STEP 1</p>
+    <p1>Heat the oven to 180C/160C fan/gas 4. Heat the oil in a large frying pan over a medium heat and fry the onion, carrots, celery and one of the bay leaves for 8-10 mins until the veg softens and is starting to turn golden. Add the mince and garlic, and stir-fry until the beef browns, about 5 mins. Tip in the tomatoes and a canful of water, the tomato purée and bouillon, bring to the boil, then cover and simmer for 20 mins, removing the lid after 10 mins to reduce the mixture slightly.</p1>
+    <p>STEP 2</p>
+    <p>Meanwhile, pour the milk into a medium pan with the flour and whisk over a low heat until the mixture is lump-free. Add the second bay leaf and a good pinch of nutmeg, and continue to cook, whisking, for 8-10 mins until thick.</p>
+    <p>STEP 3</p>
+    <p>Remove the bay from the mince and white sauce, and discard. Spoon a third of the mince into the base of a 19 x 24cm baking dish and top with two lasagne sheets. Spoon over half of the remaining mince, then top with two more lasagne sheets, the rest of the mince and the remaining lasagne sheets. Spoon over the white sauce and sprinkle with the cheese. Bake for 40 mins until bubbling and golden.</p>
 </body>
 </html>
